--- a/ocp/staging/cm-staging-window-settings.yaml
+++ b/ocp/staging/cm-staging-window-settings.yaml
@@ -1,7 +1,10 @@
+---
 apiVersion: v1
 data:
-  window-settings.js: "window.URLS = {\n    API_URL: 'https://staging.fevermap.net',\n
-    \   APP_URL: 'https://staging.fevermap.net'\n    \n};\nwindow.GOOGLE_ANALYTICS_CODE='UA-160636162-2';\n\n"
+  window-settings.js: "window.URLS = {\n    API_URL: \
+    'https://staging.fevermap.net',\n
+    \   APP_URL: 'https://staging.fevermap.net'\n    \n};\n\
+    window.GOOGLE_ANALYTICS_CODE='UA-160636162-2';\n\n"
 kind: ConfigMap
 metadata:
   creationTimestamp: null
