--- a/ocp/staging/dc-staging-fevermap-db.yaml
+++ b/ocp/staging/dc-staging-fevermap-db.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: apps.openshift.io/v1
 kind: DeploymentConfig
 metadata:
@@ -12,7 +13,6 @@ metadata:
     env: staging
     template: mariadb-ephemeral-template
   name: fevermap-db
-  selfLink: /apis/apps.openshift.io/v1/namespaces/fevermap-staging/deploymentconfigs/fevermap-db
 spec:
   replicas: 1
   revisionHistoryLimit: 10
@@ -31,80 +31,81 @@ spec:
         name: fevermap-db
     spec:
       containers:
-      - env:
-        - name: MYSQL_USER
-          valueFrom:
-            secretKeyRef:
-              key: database-user
-              name: fevermap-db
-        - name: MYSQL_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              key: database-password
-              name: fevermap-db
-        - name: MYSQL_ROOT_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              key: database-root-password
-              name: fevermap-db
-        - name: MYSQL_DATABASE
-          valueFrom:
-            secretKeyRef:
-              key: database-name
-              name: fevermap-db
-        image: openshift/mariadb:10.2
-        imagePullPolicy: IfNotPresent
-        livenessProbe:
-          failureThreshold: 3
-          initialDelaySeconds: 30
-          periodSeconds: 10
-          successThreshold: 1
-          tcpSocket:
-            port: 3306
-          timeoutSeconds: 1
-        name: mariadb
-        ports:
-        - containerPort: 3306
-          protocol: TCP
-        readinessProbe:
-          exec:
-            command:
-            - /bin/sh
-            - -i
-            - -c
-            - MYSQL_PWD="$MYSQL_PASSWORD" mysql -h 127.0.0.1 -u $MYSQL_USER -D $MYSQL_DATABASE
-              -e 'SELECT 1'
-          failureThreshold: 3
-          initialDelaySeconds: 5
-          periodSeconds: 10
-          successThreshold: 1
-          timeoutSeconds: 1
-        resources:
-          limits:
-            memory: 2Gi
-        terminationMessagePath: /dev/termination-log
-        terminationMessagePolicy: File
-        volumeMounts:
-        - mountPath: /var/lib/mysql/data
-          name: feverdb-data
+        - env:
+            - name: MYSQL_USER
+              valueFrom:
+                secretKeyRef:
+                  key: database-user
+                  name: fevermap-db
+            - name: MYSQL_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  key: database-password
+                  name: fevermap-db
+            - name: MYSQL_ROOT_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  key: database-root-password
+                  name: fevermap-db
+            - name: MYSQL_DATABASE
+              valueFrom:
+                secretKeyRef:
+                  key: database-name
+                  name: fevermap-db
+          image: openshift/mariadb:10.2
+          imagePullPolicy: IfNotPresent
+          livenessProbe:
+            failureThreshold: 3
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            successThreshold: 1
+            tcpSocket:
+              port: 3306
+            timeoutSeconds: 1
+          name: mariadb
+          ports:
+            - containerPort: 3306
+              protocol: TCP
+          readinessProbe:
+            exec:
+              command:
+                - /bin/sh
+                - -i
+                - -c
+                - >-
+                  MYSQL_PWD="$MYSQL_PASSWORD" mysql -h 127.0.0.1 -u $MYSQL_USER
+                  -D $MYSQL_DATABASE -e 'SELECT 1'
+            failureThreshold: 3
+            initialDelaySeconds: 5
+            periodSeconds: 10
+            successThreshold: 1
+            timeoutSeconds: 1
+          resources:
+            limits:
+              memory: 2Gi
+          terminationMessagePath: /dev/termination-log
+          terminationMessagePolicy: File
+          volumeMounts:
+            - mountPath: /var/lib/mysql/data
+              name: feverdb-data
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
       securityContext: {}
       terminationGracePeriodSeconds: 30
       volumes:
-      - name: feverdb-data
-        persistentVolumeClaim:
-          claimName: mariadb-storage
+        - name: feverdb-data
+          persistentVolumeClaim:
+            claimName: mariadb-storage
   test: false
   triggers:
-  - imageChangeParams:
-      automatic: true
-      containerNames:
-      - mariadb
-      from:
-        kind: ImageStreamTag
-        name: mariadb:10.2
-        namespace: openshift
-    type: ImageChange
-  - type: ConfigChange
+    - imageChangeParams:
+        automatic: true
+        containerNames:
+          - mariadb
+        from:
+          kind: ImageStreamTag
+          name: mariadb:10.2
+          namespace: openshift
+      type: ImageChange
+    - type: ConfigChange
