--- a/ocp/staging/svc-staging-fevermap-db.yaml
+++ b/ocp/staging/svc-staging-fevermap-db.yaml
@@ -1,8 +1,10 @@
+---
 apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    template.openshift.io/expose-uri: mysql://{.spec.clusterIP}:{.spec.ports[?(.name=="mariadb")].port}
+    template.openshift.io/expose-uri:
+      mysql://{.spec.clusterIP}:{.spec.ports[?(.name=="mariadb")].port}
   creationTimestamp: null
   labels:
     env: staging
@@ -11,13 +13,11 @@ metadata:
   selfLink: /api/v1/namespaces/fevermap-staging/services/fevermap-db
 spec:
   ports:
-  - name: mariadb
-    port: 3306
-    protocol: TCP
-    targetPort: 3306
+    - name: mariadb
+      port: 3306
+      protocol: TCP
+      targetPort: 3306
   selector:
     name: fevermap-db
   sessionAffinity: None
   type: ClusterIP
-status:
-  loadBalancer: {}
