Add contribution information and dependencies for prettier and eslint

--- a/app/package.json
+++ b/app/package.json
@@ -46,6 +46,8 @@
     "workbox-window": "^5.1.1"
   },
   "devDependencies": {
+    "@open-wc/eslint-config": "^2.0.0",
+    "@open-wc/prettier-config": "^0.1.10",
     "@webcomponents/webcomponentsjs": "^2.3.0",
     "autoprefixer": "^9.6.1",
     "babel-core": "^6.26.3",
@@ -57,14 +59,13 @@
     "css-loader": "^3.4.2",
     "es-dev-server": "^1.18.3",
     "eslint": "^6.8.0",
-    "@open-wc/eslint-config": "^2.0.0",
-    "@open-wc/prettier-config": "^0.1.10",
     "extract-loader": "^5.0.1",
     "file-loader": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^6.0.0",
     "mini-css-extract-plugin": "^0.9.0",
     "postcss-loader": "^3.0.0",
+    "prettier": "^2.0.4",
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
