--- a/ocp/ansible/roles/push-api/tasks/main.yml
+++ b/ocp/ansible/roles/push-api/tasks/main.yml
@@ -195,6 +195,9 @@
                   ports:
                     - containerPort: 9001
                       protocol: TCP
+                  resources:
+                    limits:
+                      memory: "{{ push_api_memory_limit }}"
                   terminationMessagePath: /dev/termination-log
                   terminationMessagePolicy: File
                   volumeMounts:
