--- a/ocp/production/template-fevermap-runtime.yaml
+++ b/ocp/production/template-fevermap-runtime.yaml
@@ -70,6 +70,11 @@ parameters:
     name: PUSH_API_IMG_URL
     required: true
     value: quay.io/fevermap/fevermap-api
+  - description: Maximum amount of memory the push api container can use.
+    displayName: Memory Limit push api
+    name: MEMORY_PUSH_API_LIMIT
+    required: true
+    value: 256Mi
   - description: Version of API image to be used (release-tag or latest).
     displayName: Push API image Version
     name: PUSH_API_VERSION
@@ -79,17 +84,17 @@ parameters:
     displayName: Memory Limit Frontned
     name: MEMORY_APP_LIMIT
     required: true
-    value: 512Mi
+    value: 256Mi
   - description: Maximum amount of memory the API container can use.
     displayName: Memory Limit API
     name: MEMORY_API_LIMIT
     required: true
-    value: 512Mi
+    value: 256Mi
   - description: Maximum amount of memory the MySQL container can use.
     displayName: Memory Limit (MySQL)
     name: MEMORY_MYSQL_LIMIT
     required: true
-    value: 512Mi
+    value: 2Gi
   - description: Volume space available for data, e.g. 512Mi, 2Gi
     displayName: Volume Capacity
     name: VOLUME_CAPACITY
@@ -178,7 +183,7 @@ objects:
         - ReadWriteOnce
       resources:
         requests:
-          storage: 1Gi
+          storage: ${VOLUME_CAPACITY}
   - apiVersion: apps.openshift.io/v1
     kind: DeploymentConfig
     metadata:
@@ -262,7 +267,7 @@ objects:
                 timeoutSeconds: 1
               resources:
                 limits:
-                  memory: 2Gi
+                  memory: ${MEMORY_MYSQL_LIMIT}
               terminationMessagePath: /dev/termination-log
               terminationMessagePolicy: File
               volumeMounts:
@@ -436,7 +441,7 @@ objects:
                   protocol: TCP
               resources:
                 limits:
-                  memory: 1Gi
+                  memory: ${MEMORY_API_LIMIT}
               terminationMessagePath: /dev/termination-log
               terminationMessagePolicy: File
               readinessProbe:
@@ -654,7 +659,7 @@ objects:
                 timeoutSeconds: 2
               resources:
                 limits:
-                  memory: 1Gi
+                  memory: ${MEMORY_APP_LIMIT}
               terminationMessagePath: /dev/termination-log
               terminationMessagePolicy: File
               volumeMounts:
@@ -795,6 +800,9 @@ objects:
               ports:
                 - containerPort: 9001
                   protocol: TCP
+              resources:
+                limits:
+                  memory: ${MEMORY_PUSH_API_LIMIT}
               terminationMessagePath: /dev/termination-log
               terminationMessagePolicy: File
               volumeMounts:
