--- a/ocp/ansible/roles/secrets/tasks/main.yml
+++ b/ocp/ansible/roles/secrets/tasks/main.yml
@@ -55,6 +55,25 @@
           selfLink: /api/v1/namespaces/fevermap-staging/secrets/quay-push-secret
         type: Opaque
 
+- name: Slack webhook secret
+  tags: secrets
+  when: (api_build or app_build or push_api_build) and slack_webhook_url is defined
+  k8s:
+    state: "{{ state }}"
+    definition:
+      - apiVersion: v1
+        data:
+          password: "{{ slack_webhook_url | string | b64encode }}"
+          username: "openshift"
+        kind: Secret
+        metadata:
+          creationTimestamp: null
+          labels:
+            credential.sync.jenkins.openshift.io: "true"
+            env: staging
+          name: slack-webhook-secret
+        type: Opaque
+
 - name: Database secret
   tags:
     - secrets
