Bugfix: Run 'hugo' in the correct path

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -74,7 +74,7 @@ pages:
   rules:
     - if: $CI_PROJECT_NAMESPACE == "fevermap" && $CI_COMMIT_BRANCH == "master"
   script:
-    - hugo
+    - cd website && hugo
   artifacts:
     paths:
       - public
