--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -74,10 +74,10 @@ pages:
   rules:
     - if: $CI_PROJECT_NAMESPACE == "fevermap" && $CI_COMMIT_BRANCH == "master"
   script:
-    - cd website && hugo
+    - hugo --source=website --destination=../public
   artifacts:
     paths:
-      - website/public
+      - public
   # All available Hugo versions are listed here: https://gitlab.com/pages/hugo/container_registry
   # Use 0.40.1 which is the same version as in Ubuntu 18.04, making it easier for Ubuntu/Debian
   # users to contribute without installing out-of-repos bleeding edge software.
